tests/errors/interpreter/stack_overflow.ny
kawaii func() => {
    func()
}

uWu_nyaa() => func();